<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?windowBackgroundColor"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:logo="@drawable/ic_28_logo_small" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:translationY="@dimen/small_gap">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/small_gap"
            android:clipChildren="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:alpha="0.5"
                android:src="@drawable/candlesticks_example"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_gap"
                android:text="@string/app_name"
                android:textAppearance="@style/Text.Header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_gap"
                android:layout_marginVertical="@dimen/medium_gap"
                android:justificationMode="inter_word"
                android:text="@string/choosing_subtitle"
                android:textAppearance="@style/Text.Body"
                app:layout_constraintBottom_toTopOf="@id/about_project"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/about_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:paddingVertical="@dimen/extra_small_gap"
                android:text="@string/choosing_about"
                android:textAppearance="@style/Text.Caption.Accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?navbarBackgroundColor"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/normal_gap"
                android:paddingVertical="@dimen/extra_small_gap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_gap"
                    android:text="@string/choosing_select_exchange"
                    android:textAppearance="@style/Text.Caption.Secondary"
                    app:layout_constraintBottom_toTopOf="@+id/first_exchange_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/first_exchange_btn"
                    style="@style/Widget.Coinroad.SolidButton.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/extra_small_gap"
                    android:drawableLeft="@drawable/ic_kickex_dark"
                    android:drawableRight="@drawable/ic_24_right"
                    android:gravity="start|center_vertical"
                    app:layout_constraintBottom_toTopOf="@+id/second_exchange_btn"
                    tools:text="@string/choosing_kickex" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/second_exchange_btn"
                    style="@style/Widget.Coinroad.SolidButton.Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/extra_small_gap"
                    android:layout_marginBottom="@dimen/extra_small_gap"
                    android:drawableLeft="@drawable/ic_kraken_dark"
                    android:drawableRight="@drawable/ic_24_right"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:gravity="start|center_vertical"
                    app:layout_constraintBottom_toTopOf="@+id/more_exchange_button"
                    app:layout_constraintEnd_toStartOf="@id/third_exchange_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/choosing_kraken" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/third_exchange_btn"
                    style="@style/Widget.Coinroad.SolidButton.Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_hitbtc_dark"
                    android:drawableRight="@drawable/ic_24_right"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:gravity="start|center_vertical"
                    app:layout_constraintBottom_toBottomOf="@id/second_exchange_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/second_exchange_btn"
                    tools:text="@string/choosing_hitbtc" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/more_exchange_button"
                    style="@style/Widget.Coinroad.SolidButton.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choosing_more_exchange"
                    android:gravity="start|center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>