<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="?dialogBackgroundColor"
        app:cardCornerRadius="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginEnd="@dimen/normal_gap"
                app:layout_constraintBottom_toBottomOf="@+id/content_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/content_title"
                app:srcCompat="@drawable/no_horns" />

            <TextView
                android:id="@+id/content_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_gap"
                android:text="@string/ads_removal_title"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/normal_gap"
                android:text="@string/ads_removal_description"
                android:textColor="?secondaryTextColor"
                app:layout_constraintEnd_toEndOf="@+id/image_view"
                app:layout_constraintStart_toStartOf="@+id/content_title"
                app:layout_constraintTop_toBottomOf="@+id/content_title" />

            <TextView
                android:id="@+id/text_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/extra_small_gap"
                android:text="@string/ads_removal_monthly"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/btn_monthly"
                app:layout_constraintEnd_toStartOf="@+id/btn_monthly"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_view2"
                app:layout_constraintTop_toTopOf="@+id/btn_monthly" />

            <TextView
                android:id="@+id/text_yearly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ads_removal_yearly"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/text_year_promo"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/btn_yearly"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_monthly"
                style="@style/Widget.Coinroad.PurchaseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_gap"
                android:layout_marginEnd="@dimen/normal_gap"
                android:minWidth="110dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view2"
                tools:text="RUB 45.99" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yearly"
                style="@style/Widget.Coinroad.PurchaseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_gap"
                android:layout_marginEnd="@dimen/normal_gap"
                android:layout_marginBottom="@dimen/normal_gap"
                android:minWidth="110dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_monthly"
                tools:text="RUB 499.00" />

            <ImageView
                android:id="@+id/check_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/extra_small_gap"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btn_monthly"
                app:layout_constraintEnd_toStartOf="@+id/btn_monthly"
                app:layout_constraintTop_toTopOf="@+id/btn_monthly"
                app:srcCompat="@drawable/ic_baseline_check_24" />

            <ImageView
                android:id="@+id/check_yearly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/extra_small_gap"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btn_yearly"
                app:layout_constraintEnd_toStartOf="@+id/btn_yearly"
                app:layout_constraintTop_toTopOf="@+id/btn_yearly"
                app:srcCompat="@drawable/ic_baseline_check_24" />

            <TextView
                android:id="@+id/text_year_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ads_removal_promote"
                android:textColor="?secondaryTextColor"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_yearly"
                app:layout_constraintStart_toStartOf="@+id/text_yearly"
                app:layout_constraintTop_toBottomOf="@+id/text_yearly" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/extra_small_gap"
                android:layout_marginBottom="@dimen/extra_small_gap"
                android:background="@color/gray_c"
                app:layout_constraintBottom_toTopOf="@+id/btn_yearly"
                app:layout_constraintEnd_toEndOf="@+id/btn_monthly"
                app:layout_constraintStart_toStartOf="@+id/text_monthly"
                app:layout_constraintTop_toBottomOf="@+id/btn_monthly" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_restore"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_gap"
        android:layout_marginBottom="@dimen/extra_small_gap"
        android:text="@string/ads_restore_purchases"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>